# curses-test

./: CMakeLists.txt  LICENSE  README.md
src/: main.c
